Implement Jenkins pipeline for project automation
Added a Jenkins pipeline with stages for cloning, cleaning, compiling, testing, and building the project.

--- a/Amazon/Jenkinsfile
+++ b/Amazon/Jenkinsfile
@@ -1,4 +1,31 @@
-new feature added
-add feature 2
-lets check one build now
-checking for ngrok
+//abcd
+pipeline {
+  agent any
+  stages {   
+   stage('clone project') {
+      steps {
+           git branch:'master' , url:'https://github.com/yeshwanthkr12/Amazon'
+       }
+   }
+   stage('clean') {
+      steps {
+           sh 'mvn clean'
+       }
+   }
+   stage('compile') {
+      steps {
+           sh 'mvn compile'
+       }
+   }
+   stage('test') {
+      steps {
+           sh 'mvn test'
+       }
+   }
+   stage('build') {
+      steps {
+           sh 'mvn clean install'
+       }
+   }
+}
+}
