--- a/Amazon/Jenkinsfile
+++ b/Amazon/Jenkinsfile
@@ -1,31 +1,39 @@
-//abcd
 pipeline {
-  agent any
-  stages {   
-   stage('clone project') {
-      steps {
-           git branch:'master' , url:'https://github.com/yeshwanthkr12/Amazon'
-       }
-   }
-   stage('clean') {
-      steps {
-           sh 'mvn clean'
-       }
-   }
-   stage('compile') {
-      steps {
-           sh 'mvn compile'
-       }
-   }
-   stage('test') {
-      steps {
-           sh 'mvn test'
-       }
-   }
-   stage('build') {
-      steps {
-           sh 'mvn clean install'
-       }
-   }
-}
+    agent any
+
+    tools {
+        maven 'maven-3'
+    }
+
+    stages {   
+        stage('clone project') {
+            steps {
+                git branch: 'master', url: 'https://github.com/yeshwanthkr12/Amazon'
+            }
+        }
+
+        stage('clean') {
+            steps {
+                sh 'mvn clean'
+            }
+        }
+
+        stage('compile') {
+            steps {
+                sh 'mvn compile'
+            }
+        }
+
+        stage('test') {
+            steps {
+                sh 'mvn test'
+            }
+        }
+
+        stage('build') {
+            steps {
+                sh 'mvn clean install'
+            }
+        }
+    }
 }
